components/bamoe/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bamoe-app
  name: bamoe-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bamoe-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bamoe-app
    spec:
      containers:
        - name: bamoe-app
          image: docker.io/ldesrosi/hiring-container:latest
          command: ["/bin/sh"]
          args: ["-c", "/opt/jboss/container/java/run/run-java.sh"]
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /home/kogito/data/svg
              name: bamoe-app-claim
      restartPolicy: Always
      volumes:
        - name: bamoe-app-claim
          persistentVolumeClaim:
            claimName: bamoe-app-claim
