components/bamoe/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bamoe-app
  name: bamoe-app
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    app: bamoe-app
